[package]
name = "example"
version = "0.1.0"
authors = ["nun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
alloy-transport-window = { path = ".." }
alloy = { version = "1.4", default-features = false, features = ["contract", "signers", "rpc-types"]}
hex = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
