[package]
name = "example"
version = "0.1.0"
authors = ["nun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
alloy-transport-window = { path = "..", features = ["eip712"] }
alloy = { version = "1.4", default-features = false, features = ["contract", "signers", "rpc-types", "serde"]}
alloy-sol-types = "1.4"
alloy-dyn-abi = { version = "1.4", default-features = false, features = ["eip712"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
